<resources>
    <string name="app_name">Product list</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_profile">Profile</string>
    <string name="back">Back</string>
    <string name="about">About</string>
    <string name="group">Group 951008</string>
    <string name="student">Artsiom Sharakhouski</string>
    <string name="task">Task #2</string>
    <string name="full_name_header">Full name:</string>
    <string name="email_header">email:</string>
    <string name="full_name">Sharakhouski Artsiom Aleksandrovich</string>
    <string name="email">fishemail@gmail.com</string>
    <string name="wild">Wild</string>
    <string name="farmed">Farmed</string>
    <string name="quantity">Quantity</string>
    <string name="date">Date</string>
    <string name="results">Results</string>
</resources>